# smart_door

./: CMakeLists.txt  LBH_model.xml  LICENSE  main.cpp
include/: face_detection.hpp  face_recognition.hpp  socket_server.h
src/: CMakeLists.txt  SmartDoor  c_sockets_nasser.c  face_detection.cpp  face_recognition.cpp  socket_server.c
